syntax = "proto3";

option csharp_namespace = "WarehouseManagementSystemServer";

package greet;

import "google/protobuf/empty.proto";

service Shipment{
	rpc SetShipment (ShipmentRequest) returns (ShipmentResponce);
}

service Productor{
	rpc GetAllProduct(google.protobuf.Empty) returns (AllProductResponce);
}

message ShipmentRequest{
	repeated Party Partys = 1;
}

message Party{
	Product Product = 1;
	int32 Count = 2;
}

message Product{
	int32 Id = 1;
	string Name = 2;
	string Description = 3;
}

message ShipmentResponce{
	repeated PartyResponce responce = 1;
}
message PartyResponce{
	int32 Id = 1;
	Party Party = 2;
	string CellTitle = 3;
}

message AllProductResponce{
	repeated Product Products = 1;
}